--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.23.2"
+    "@babel/plugin-proposal-decorators": "^7.23.2",
+    "tailwindcss": "^3.3.5"
   }
 }
