--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://imnotrafa.github.io/HaccsWebsite_demo",
   "name": "haccspage",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.2",
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.5"
   }
 }
