Fixed desktop view, straightened out. All tabs optimized for mobile view

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-picker": "^0.1.0",
+    "react-native": "^0.73.2",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
