--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://imnotrafa.github.io/HaccsWebsite_demo",
+  "homepage": "http://imnotrafa.github.io/HaccsWebsite_demo",
   "name": "haccspage",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-bootstrap": "^2.9.0",
@@ -30,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b tester_2 -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
