--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://imnotrafa.github.io/HaccsWebsite_demo",
+  "homepage": "https://imnotrafa.github.io/HaccsWebsite_demo",
   "name": "haccspage",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +18,6 @@
     "dotenv": "^16.3.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-bootstrap": "^2.9.0",
@@ -31,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b tester_2 -d build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.2",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.3.5"
   }
 }
